Closed
Bug 549691
Opened 16 years ago
Closed 16 years ago
Null pointer dereference in nsChildView.mm's [ChildView mouseUp:]
Categories
(Core :: Widget: Cocoa, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: smichaud, Assigned: smichaud)
Details
Attachments
(1 file)
|
1.36 KB,
patch
|
jaas
:
review+
|
Details | Diff | Splinter Review |
The following crash log shows that mGeckoChild can be null at line 3137 in nsChildView.mm.
bp-390afbe4-7e37-4ba5-b9b8-3c7df2100226
Patch coming up.
| Assignee | ||
Comment 1•16 years ago
|
||
| Assignee | ||
Comment 2•16 years ago
|
||
I found this by looking through dbaron's lists of crashes by nightly build:
http://dbaron.org/mozilla/crashes-by-build
Attachment #429811 -
Flags: review?(joshmoz) → review+
| Assignee | ||
Comment 3•16 years ago
|
||
Landed on trunk:
http://hg.mozilla.org/mozilla-central/rev/bacc4eece3fb
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•