Bug 549691 - Null pointer dereference in nsChildView.mm's [ChildView mouseUp:]. r=josh